--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,73 +6,45 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
-  build:
-    docker:
-      # the base image can run most needed actions with orbs
-      - image: "cimg/node:14.15"
+  # First of all build Front end alone firest to check if All proccess run correctly
+  frontend:
+    working_directory: ~/my-deploying-Full-Stack-App/udagram-frontend
+    executor: node/default
     steps:
-      # install node and checkout code
-      - node/install:
-          node-version: '14.15'         
-      - checkout
-      # Use root level package.json to install dependencies in the frontend app
+      - checkout:
+          path: ~/my-deploying-Full-Stack-App
+      - node/install-packages:
+          app-dir: ~/my-deploying-Full-Stack-App/udagram-frontend
       - run:
-          name: Install Front-End Dependencies
-          command: |
-            echo "NODE --version" 
-            echo $(node --version)
-            echo "NPM --version" 
-            echo $(npm --version)
-            npm run frontend:install
-      # TODO: Install dependencies in the the backend API          
+          name: Build Frontend
+          command: npm run build
+      - aws-cli/install
       - run:
-          name: Install API Dependencies
-          command: |
-           echo "TODO: Install dependencies in the the backend API  "
-      # TODO: Lint the frontend
-      - run:
-          name: Front-End Lint
-          command: |
-            echo "TODO: Lint the frontend"
-      # TODO: Build the frontend app
-      - run:
-          name: Front-End Build
-          command: |
-            echo "TODO: Build the frontend app"
-      # TODO: Build the backend API      
-      - run:
-          name: API Build
-          command: |
-            echo "TODO: Build the backend API"
-  # deploy step will run only after manual approval
-  deploy:
-    docker:
-      - image: "cimg/base:stable"
-      # more setup needed for aws, node, elastic beanstalk
+          name: Deploy Frontend
+          command: aws s3 cp --recursive --acl public-read ./www $S3_BUCKET_FRONTEND
+  backend:
+    working_directory: ~/my-deploying-Full-Stack-App/udagram-api
+    executor: node/default
     steps:
-      - node/install:
-          node-version: '14.15' 
-      - eb/setup
-      - aws-cli/setup
-      - checkout
+      - checkout:
+          path: ~/my-deploying-Full-Stack-App
+      - node/install-packages:
+          app-dir: ~/my-deploying-Full-Stack-App/udagram-api
       - run:
-          name: Deploy App
-          # TODO: Install, build, deploy in both apps
-          command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            
+          name: Build and Archive backend
+          command: |-
+            npm run build
+            printenv > www/.env
+            npm run archive
+      - aws-cli/install
+      - run:
+          name: Deploy backend
+          command: |-
+            aws s3 cp ./www/Archive.zip $S3_BUCKET_SERVER
+            aws elasticbeanstalk create-application-version --application-name $EB_APP --version-label <<pipeline.git.revision>> --source-bundle S3Bucket="$EB_BUCKET",S3Key="Archive.zip"
+            aws elasticbeanstalk update-environment --application-name $EB_APP --environment-name $EB_ENV --version-label <<pipeline.git.revision>>
 workflows:
-  udagram:
+  build_and_deploy:
     jobs:
-      - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - master
-          type: approval
-          requires:
-            - build
-      - deploy:
-          requires:
-            - hold
+      - frontend
+      - backend
