--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "scripts": {
-        "frontend:install": "cd my-deploying-Full-Stack-App/udagram-frontend && npm install -f",
-        "frontend:start": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run start",
-        "frontend:build": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run build",
-        "frontend:test": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run test",
-        "frontend:e2e": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run e2e",
-        "frontend:lint": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run lint",
-        "frontend:deploy": "cd my-deploying-Full-Stack-App/udagram-frontend && npm run deploy",
-        "api:install": "cd my-deploying-Full-Stack-App/udagram-api && npm install .",
-        "api:build": "cd my-deploying-Full-Stack-App/udagram-api && npm run build",
-        "api:start": "cd my-deploying-Full-Stack-App/udagram-api && npm run dev",
-        "api:deploy": "cd my-deploying-Full-Stack-App/udagram-api && npm run deploy",
+        "frontend:install": "cd udagram-frontend && npm install -f",
+        "frontend:start": "cd udagram-frontend && npm run start",
+        "frontend:build": "cd udagram-frontend && npm run build",
+        "frontend:test": "cd udagram-frontend && npm run test",
+        "frontend:e2e": "cd udagram-frontend && npm run e2e",
+        "frontend:lint": "cd udagram-frontend && npm run lint",
+        "frontend:deploy": "cd udagram-frontend && npm run deploy",
+        "api:install": "cd udagram-api && npm install .",
+        "api:build": "cd udagram-api && npm run build",
+        "api:start": "cd udagram-api && npm run dev",
+        "api:deploy": "cd udagram-api && npm run deploy",
         "deploy": "npm run api:deploy && npm run frontend:deploy"
     }
 }
