--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,32 +18,27 @@ jobs:
       # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
-          command: |
-            echo "NODE --version" 
-            echo $(node --version)
-            echo "NPM --version" 
-            echo $(npm --version)
-            npm run frontend:install
+          command:
+          cd udagram-frontend
+           npm install
       # TODO: Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
-          command: |
-            echo "TODO: Install dependencies in the the backend API  "
+          command: 
+          cd udagram-api
+          npm install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
-          command: |
-            echo "TODO: Lint the frontend"
+          command: npm run lint
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
-          command: |
-            echo "TODO: Build the frontend app"
+          command: npm run build
       # TODO: Build the backend API
       - run:
           name: API Build
-          command: |
-            echo "TODO: Build the backend API"
+          command: npm run build
   # deploy step will run only after manual approval
   deploy:
     docker:
@@ -59,8 +54,7 @@ jobs:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
-
+           npm run deploy
 workflows:
   my-deploying-Full-Stack-App:
     jobs:
@@ -69,7 +63,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
           type: approval
           requires:
             - build
