--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,11 @@ jobs:
       - run:
           name: Install Front-End Dependencies
           command:
-          cd udagram-frontend
            npm install
       # TODO: Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
-          command: 
-          cd udagram-api
-          npm install
+          command:   npm install
       # TODO: Lint the frontend
       - run:
           name: Front-End Lint
