--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs:
       - run:
           name: Install API Dependencies
           command:   npm install
+      # TODO: Lint the frontend
+      - run:
+          name: Front-End Lint
+          command: npm run lint
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
